# miwei_temp

./: CHANGES  CMakeLists.txt  README.md  build.xml.in
examples/freebase/: CMakeLists.txt  create-table-freebase.hql  freebase_load.cc  freebase_parser.cc  freebase_parser.h
src/: CMakeLists.txt
src/cc/: main.dox
src/cc/AsyncComm/: ApplicationHandler.h  ApplicationQueue.h  ApplicationQueueInterface.h  CMakeLists.txt  Clock.h  Comm.cc  Comm.h  CommAddress.cc  CommAddress.h  CommBuf.h  CommHeader.cc  CommHeader.h  Config.cc  Config.h  ConnectionHandlerFactory.h  ConnectionInitializer.h  ConnectionManager.cc  ConnectionManager.h  DispatchHandler.h  DispatchHandlerSynchronizer.cc  DispatchHandlerSynchronizer.h  Event.cc  Event.h  ExpireTimer.h  GangliaMetrics.cc  GangliaMetrics.h  HandlerMap.cc  HandlerMap.h  IOHandler.cc  IOHandler.h  IOHandlerAccept.cc  IOHandlerAccept.h  IOHandlerData.cc  IOHandlerData.h  IOHandlerDatagram.cc  IOHandlerDatagram.h  IOHandlerRaw.cc  IOHandlerRaw.h  PollEvent.cc  PollEvent.h  (+18 more)
src/cc/AsyncComm/tests/: CommTestDatagramThreadFunction.cc  CommTestDatagramThreadFunction.h  CommTestThreadFunction.cc  CommTestThreadFunction.h  commTest.cc  commTestDatagram.cc  commTestReverseRequest.cc  commTestTimeout.cc  commTestTimer.cc
src/cc/Benchmark/: CMakeLists.txt
src/cc/Benchmark/random/: CMakeLists.txt  random_read_test.cc  random_write_test.cc
src/cc/Benchmark/write/: CMakeLists.txt  ht_write_test.cc
src/cc/Common/: Abi.cc  Abi.h  Allocator.h  Barrier.h  Base64.cc  Base64.h  BlobHashSet.h  BlobHashTraits.h  BloomFilter.h  BloomFilterWithChecksum.h  ByteString.h  CMakeLists.txt  Checksum.cc  Checksum.h  ClusterDefinition.cc  ClusterDefinition.h  Compat.h  Config.cc  Config.h  ConsoleOutputSquelcher.cc  ConsoleOutputSquelcher.h  Cronolog.cc  Cronolog.h  Crontab.cc  Crontab.h  Crypto.cc  Crypto.h  CstrHashMap.h  CstrHashTraits.h  Debug.cc  Debug.h  DiscreteRandomGenerator.cc  DiscreteRandomGenerator.h  DiscreteRandomGeneratorFactory.cc  DiscreteRandomGeneratorFactory.h  DiscreteRandomGeneratorUniform.h  DiscreteRandomGeneratorZipf.cc  DiscreteRandomGeneratorZipf.h  DynamicBuffer.h  Error.cc  (+115 more)
src/cc/Common/ClusterDefinition/: CMakeLists.txt  Compiler.cc  Compiler.h  ToJson.cc  ToJson.h  Token.cc  Token.h  Tokenizer.cc  Tokenizer.h  TokenizerTools.cc  TokenizerTools.h  TranslationContext.h  Translator.h  TranslatorCode.h  TranslatorRole.cc  TranslatorRole.h  TranslatorTask.h  TranslatorVariable.h
src/cc/Common/tests/: Base64_test.cc  ClusterDefinition_test.cc  ClusterDefinition_test.golden  Crypto_test.cc  HostSpecification_test.cc  HostSpecification_test.golden  Serializable_test.cc  Serializable_test.golden  TimeWindowTest.cc  TimeWindowTest.golden  bloom_filter_test.cc  code_search_and_replace.cc  config_test.cc  container_test.cc  crontab_test.cc  crontab_test.golden  escaper_test.cc  exception_test.cc  failure_inducer_test.cc  failure_inducer_test.golden  filesystem_test.cc  hash_test.cc  inetaddr_test.cc  init_test.cc  logging_test.cc  md5_base64_test.cc  mutex_test.cc  pagearena_test.cc  properties_test.cc  properties_test.golden  scope_guard_test.cc  sertest.cc  stats_serialize_test.cc  string_compressor_test.cc  timeinline_test.cc
src/cc/DfsBroker/Lib/: Broker.h  CMakeLists.txt  Client.cc  Client.h  ClientBufferedReaderHandler.cc  ClientBufferedReaderHandler.h  Config.cc  Config.h  ConnectionHandler.cc  ConnectionHandler.h  ConnectionHandlerFactory.h  FileDevice.cc  FileDevice.h  OpenFileMap.h  Protocol.cc  Protocol.h  RequestHandlerAppend.cc  RequestHandlerAppend.h  RequestHandlerClose.cc  RequestHandlerClose.h  RequestHandlerCreate.cc  RequestHandlerCreate.h  RequestHandlerDebug.cc  RequestHandlerDebug.h  RequestHandlerExists.cc  RequestHandlerExists.h  RequestHandlerFlush.cc  RequestHandlerFlush.h  RequestHandlerLength.cc  RequestHandlerLength.h  RequestHandlerMkdirs.cc  RequestHandlerMkdirs.h  RequestHandlerOpen.cc  RequestHandlerOpen.h  RequestHandlerPosixReaddir.cc  RequestHandlerPosixReaddir.h  RequestHandlerPread.cc  RequestHandlerPread.h  RequestHandlerRead.cc  RequestHandlerRead.h  (+26 more)
src/cc/DfsBroker/ceph/: CMakeLists.txt  CephBroker.cc  CephBroker.h  main.cc
src/cc/DfsBroker/kosmos/: CMakeLists.txt  KosmosBroker.cc  KosmosBroker.h  main.cc
src/cc/DfsBroker/local/: CMakeLists.txt  LocalBroker.cc  (+2 more)
src/cc/FsBroker/: comments.dox
src/cc/HyperAppHelper/: CMakeLists.txt  Error.h  Unique.cc  Unique.h
src/cc/HyperPython/: CMakeLists.txt  SerializedCells.cc
src/cc/Hyperspace/: BerkeleyDbFilesystem.cc  BerkeleyDbFilesystem.h  CMakeLists.txt  ClientConnectionHandler.cc  ClientConnectionHandler.h  ClientHandleState.h  ClientKeepaliveHandler.cc  ClientKeepaliveHandler.h  Config.cc  Config.h  DbtManaged.h  DirEntry.cc  DirEntry.h  DirEntryAttr.cc  DirEntryAttr.h  Event.cc  Event.h  FileHandleCallback.h  HandleCallback.cc  HandleCallback.h  HsClientState.cc  HsClientState.h  HsCommandInterpreter.cc  HsCommandInterpreter.h  HsHelpText.cc  HsHelpText.h  HsParser.h  LockSequencer.h  Master.cc  Master.h  MetricsHandler.cc  MetricsHandler.h  Notification.h  Protocol.cc  Protocol.h  RequestHandlerAttrDel.cc  RequestHandlerAttrDel.h  RequestHandlerAttrExists.cc  RequestHandlerAttrExists.h  RequestHandlerAttrGet.cc  (+72 more)
src/cc/Hypertable/: CMakeLists.txt  comments.dox
src/cc/ThriftBroker/: CMakeLists.txt  Client.h  Client.thrift  Config.cc  Config.h  Hql.thrift  MetricsHandler.cc  MetricsHandler.h  SerializedCellsFlag.h  SerializedCellsReader.cc  SerializedCellsReader.h  SerializedCellsWriter.cc  SerializedCellsWriter.h  ThriftBroker.cc  ThriftHelper.cc  ThriftHelper.h
src/cc/Tools/: CMakeLists.txt  comments.dox
src/java/ThriftClient/: CMakeLists.txt
src/js/: CMakeLists.txt
src/js/node/: client_test.js
src/perl/ThriftClient/: CMakeLists.txt  client_test.pl
src/php/ThriftClient/: CMakeLists.txt  ThriftClient.php  client_test.php
src/py/ThriftClient/: CMakeLists.txt  client_test.py
src/py/ganglia/: CMakeLists.txt
src/rb/Monitoring/: CMakeLists.txt  htm-app  htmonitoring.rb
src/rb/ThriftClient/: CMakeLists.txt  client_test.rb
(+2451 files in other folders)
